discussion/kv_engine/173672/173672_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Add support for collecting metering data (WIP)

Add the skeleton for collecting metering information. Note that
all commands implemented in the engine itself would need to
update the cookie with the amount of data read / written

It is "easy" to track the write path as a successful document write
contains the WCU. We can't really use the bucket_get() methods for
counting the RCU's as we do multiple of them and might not return
the data to the user (also to implement retry logic on the server
for dealing with cas conflicts)

Change-Id: I20d4b7779db95d73236c667255e232b09771f786

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-04-19 09:00:57.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-19 09:34:07.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38088/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/tenant.cc:98:38:
error: member access into incomplete type "Cookie"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38088/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16729/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant.cc:98:38: error: member access into incomplete type "Cookie" [clang-diagnostic-error]
    const auto [read, write] = cookie.getDocumentRWBytes();
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/tenant.h:21:7: note: forward declaration of "Cookie"
class Cookie;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16729/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/tenant.cc:98:38:
error: member access into incomplete type "Cookie" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16729/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45343/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15658/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6381/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18842/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17601/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18506/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19544/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26910/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6443/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-19 09:50:22.000000000
Message: 
Patch Set 4: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26910/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26910/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6381/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6381/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19544/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19544/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18506/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18506/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18842/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18842/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17601/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17601/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6443/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6443/ )
----------------------------------------------------------------------------------------------------------------------
